--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link real="stylesheet" href="./style.css">
     <title>Моя сторінка</title>
-    <link href="../style.css" type="text/css">
-    <style type="text/css">
-     body{background-color:aliceblue;}
-
-    </style>
 </head>
 <body>
     <header>
