--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <style type="text/css">
-        body{background-color:aliceblue;}
-   
-       </style>
+        body{background-color:rgba(245, 231, 204, 0.992); color: #3e2c19;}
+    </style>
     <title>Контакти</title>
 </head>
 <body>
