--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <style type="text/css">
-        body{background-color:aliceblue;}
-   
-       </style>
+        body{background-color:rgba(243, 214, 229, 0.337); color: #e35d9e;}
+    </style>
     <title>Галерея</title>
 </head>
 <body>
