--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link real="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    <!-- <style type="text/css">
+        label{color:aliceblue;}
+        body{background-color: aleceblue}
+    </style>-->   
     <title>Моя сторінка</title>
 </head>
 <body>
